--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- preloader -->
   <link rel="preload" href="styles/styles.css" as="style" crossorigin="anonymous">
-  <link rel="preload" href="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor" as="script" crossorigin="anonymous">
+  <link rel="preload"
+    href="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"
+    as="script" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswald/Oswald-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswald/Lato-Regular.woff2" as="font" crossorigin="anonymous">
   <!-- favicon -->
@@ -78,7 +80,8 @@
         <img class="hero__image" src="images/hero/can-mobile@1x.png" srcset="images/hero/can-mobile@2x.png" width="280"
           height="270" alt="Фотография Cat Energy Pro Курица">
       </picture>
-      <a class="hero__button button button--auxiliary" href="form.html" aria-label="Подобрать программу.">Подобрать программу</a>
+      <a class="hero__button button button--auxiliary" href="form.html" aria-label="Подобрать программу.">Подобрать
+        программу</a>
     </section>
     <section class="page-main__programs programs">
       <h2 class="visually-hidden">Наши программы</h2>
@@ -109,78 +112,87 @@
       <h2 class="visually-hidden">Как работает Cat Energy Pro</h2>
       <p class="functional__heading">Как это работает</p>
       <ol class="functional__list">
-        <li class="functional__item">
-          <h3 class="functional__text functional__text--leaf">Функциональное питание содержит только полезные питательные вещества.</h3>
+        <li class="functional__item functional__item--one">
+          <h3 class="functional__text functional__text--leaf">Функциональное питание содержит только полезные
+            питательные вещества.</h3>
         </li>
-        <li class="functional__item">
-          <h3 class="functional__text functional__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</h3>
+        <li class="functional__item functional__item--two">
+          <h3 class="functional__text functional__text--cook">Выпускается в виде порошка, который нужно лишь залить
+            кипятком и готово.</h3>
         </li>
-        <li class="functional__item">
-          <h3 class="functional__text functional__text--eat">Замените один-два приема обычной еды на наше функциональное питание.</h3>
+        <li class="functional__item functional__item--three">
+          <h3 class="functional__text functional__text--eat">Замените один-два приема обычной еды на наше функциональное
+            питание.</h3>
         </li>
-        <li class="functional__item">
-          <h3 class="functional__text functional__text--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</h3>
+        <li class="functional__item functional__item--four">
+          <h3 class="functional__text functional__text--scales">Уже через месяц наслаждайтесь изменениями к лучшему
+            вашего питомца!</h3>
         </li>
       </ol>
     </section>
     <section class="page-main__example example">
-      <h2 class="example__heading">Живой пример</h2>
-      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в день.</p>
-      <ul class="example__list">
-        <li class="example__item">
-          <p class="example__term">5 кг</p>
-          <p class="example__definition">снижение веса</p>
-        </li>
-        <li class="example__item">
-          <p class="example__term">60 дней</p>
-          <p class="example__definition">затрачено времени</p>
-        </li>
-      </ul>
-      <p class="example__description">Затраты на питание:<br class="example__description-wrapping">
-        <span>15 000 РУБ.</span>
-      </p>
-      <div class="example__slider slider">
-        <div class="slider__wrapper slider__wrapper-before">
-          <picture>
-            <!-- webp -->
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="images/example/boris-before-tablet@1x.webp 1x, images/example/boris-before-tablet@2x.webp 2x"
-              width="560" height="512">
-            <source type="image/webp"
-              srcset="images/example/boris-before-mobile@1x.webp 1x, images/example/boris-before-mobile@2x.webp 2x"
-              width="280" height="256">
-            <!-- png -->
-            <source type="image/png" media="(min-width: 768px)"
-              srcset="images/example/boris-before-tablet@1x.png 1x, images/example/boris-before-tablet@2x.png 2x"
-              width="560" height="512">
-            <img class="slider__image" src="images/example/boris-before-mobile@1x.png"
-              srcset="images/example/boris-before-mobile@2x.png" alt="Кот Борис до." width="280" height="256">
-          </picture>
+      <div class="example__wrapper">
+        <h2 class="example__heading">Живой пример</h2>
+        <div class="example__container">
+          <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+            часов
+            в день.</p>
+          <ul class="example__list">
+            <li class="example__item">
+              <p class="example__term">5 кг</p>
+              <p class="example__definition">снижение веса</p>
+            </li>
+            <li class="example__item">
+              <p class="example__term">60 дней</p>
+              <p class="example__definition">затрачено времени</p>
+            </li>
+          </ul>
+          <p class="example__description">Затраты на питание:<br class="example__description-wrapping">
+            <span>15 000 РУБ.</span>
+          </p>
         </div>
-        <div class="slider__wrapper slider__wrapper-after">
-          <picture>
-            <!-- webp -->
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="images/example/boris-after-tablet@1x.webp 1x, images/example/boris-after-tablet@2x.webp 2x"
-              width="560" height="512">
-            <source type="image/webp"
-              srcset="images/example/boris-after-mobile@1x.webp 1x, images/example/boris-after-mobile@2x.webp 2x"
-              width="280" height="256">
-            <!-- png -->
-            <source type="image/png" media="(min-width: 768px)"
-              srcset="images/example/boris-after-tablet@1x.png 1x, images/example/boris-after-tablet@2x.png 2x"
-              width="560" height="512">
-            <img class="slider__image" src="images/example/boris-after-mobile@1x.png"
-              srcset="images/example/boris-after-mobile@2x.png" alt="Кот Борис после." width="280" height="256">
-          </picture>
+        <div class="example__slider slider">
+          <div class="slider__wrapper slider__wrapper-before">
+            <picture>
+              <!-- webp -->
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="images/example/boris-before-tablet@1x.webp 1x, images/example/boris-before-tablet@2x.webp 2x"
+                width="560" height="512">
+              <source type="image/webp"
+                srcset="images/example/boris-before-mobile@1x.webp 1x, images/example/boris-before-mobile@2x.webp 2x"
+                width="280" height="256">
+              <!-- png -->
+              <source type="image/png" media="(min-width: 768px)"
+                srcset="images/example/boris-before-tablet@1x.png 1x, images/example/boris-before-tablet@2x.png 2x"
+                width="560" height="512">
+              <img class="slider__image" src="images/example/boris-before-mobile@1x.png"
+                srcset="images/example/boris-before-mobile@2x.png" alt="Кот Борис до." width="280" height="256">
+            </picture>
+          </div>
+          <div class="slider__wrapper slider__wrapper-after">
+            <picture>
+              <!-- webp -->
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="images/example/boris-after-tablet@1x.webp 1x, images/example/boris-after-tablet@2x.webp 2x"
+                width="560" height="512">
+              <source type="image/webp"
+                srcset="images/example/boris-after-mobile@1x.webp 1x, images/example/boris-after-mobile@2x.webp 2x"
+                width="280" height="256">
+              <!-- png -->
+              <source type="image/png" media="(min-width: 768px)"
+                srcset="images/example/boris-after-tablet@1x.png 1x, images/example/boris-after-tablet@2x.png 2x"
+                width="560" height="512">
+              <img class="slider__image" src="images/example/boris-after-mobile@1x.png"
+                srcset="images/example/boris-after-mobile@2x.png" alt="Кот Борис после." width="280" height="256">
+            </picture>
+          </div>
+          <button class="slider__control" type="button" aria-label="Управление слайдером.">
+            <svg class="slider__thumb" width="40" height="40" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#thumb"></use>
+            </svg>
+          </button>
         </div>
-        <button class="slider__control" type="button" aria-label="Управление слайдером.">
-          <svg class="slider__thumb" width="40" height="40" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#thumb"></use>
-          </svg>
-        </button>
       </div>
     </section>
     <section class="page-main__invite invite">
@@ -188,49 +200,53 @@
       <div class="invite__wrapper">
         <p class="invite__heading">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
         <h3 class="invite__text">ул. Большая<br>Конюшенная, д. 19/8<br>
-          <span  class="invite__text-city">Санкт-Петербург</span>
+          <span class="invite__text-city">Санкт-Петербург</span>
         </h3>
       </div>
       <div class="invite__map map">
-        <iframe  class="map__frame map__frame--no-js" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
+        <iframe class="map__frame map__frame--no-js"
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
       </div>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
-      <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
-        <use href="icons/stack.svg#logo-footer"></use>
-      </svg>
-    </a>
-    <ul class="page-footer__social social">
-      <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK.">
-          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#social_vkontakte"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube.">
-          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#social_youtube"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram.">
-          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#social_telegram"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy.">
-      <p class="htmlacademy__text">HTML Academy</p>
-      <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false" >
-        <use href="icons/stack.svg#html-academy"></use>
-      </svg>
-    </a>
+    <div class="page-footer__wrapper">
+      <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
+        <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
+          <use href="icons/stack.svg#logo-footer"></use>
+        </svg>
+      </a>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link" href="#" aria-label="VK.">
+            <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#social_vkontakte"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#" aria-label="YouTube.">
+            <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#social_youtube"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#" aria-label="Telegram.">
+            <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#social_telegram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"
+        aria-label="HTML Academy.">
+        <p class="htmlacademy__text">HTML Academy</p>
+        <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false">
+          <use href="icons/stack.svg#html-academy"></use>
+        </svg>
+      </a>
+    </div>
   </footer>
 </body>
 
